# gui

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: build.yml
cmake/: FindGR.cmake  Findyaml-cpp.cmake  bindirs.cmake  cpp.cmake
lib/: collect_dependencies.py
qml/: circle.qml  dummy.qml
src/: MainWindow.cpp  MainWindow.h  main.cpp  recreation.cpp
src/App/: Main.cpp  Recreation.cpp  testMultiplot.cpp
src/MainWindow/: MainWindow.cpp  MainWindow.h  NumericTestWidget.cpp  NumericTestWidget.h
src/Plotting/: Appearance.h  Axes.h  Axes.hpp  CMakeLists.txt  Container.cpp  Container.h  Container.hpp  Plot.cpp  Plot.h  Plot2D.cpp  Plot2D.h  Plot2D.hpp  PlotAPI.h  PlotAPI.hpp  PlotGR.cpp  PlotGR.h  Series.h  Series.hpp
src/Plotting/Backend/: APIGR.h  APIGR.hpp  APIQChart.h  ColorGR.h  ColorGR.hpp  CoreGR.cpp  CoreGR.h  CoreGR.hpp  CoreQChart.cpp  CoreQChart.h  CoreQChart.hpp  GR.cpp  GR.h
src/Util/: FiniteDiff.hpp  Sizing.h  Sizing.hpp  UserPaths.hpp
src/Util/Filesystem/: API.hpp  CMakeLists.txt  Config.hpp  DataIO.cpp  DataIO.hpp  UserPaths.cpp  UserPaths.hpp
src/Widgets/AttitudePlot/: Container.cpp  Plot.cpp  Plot.h
src/Widgets/Dial/: Attitude.cpp  Attitude.hpp  AttitudeDial.cpp  AttitudeDial.h  AttitudeDial.hpp  Composite.cpp  Composite.hpp
src/Widgets/Displays/: MultiPlotContainer.cpp  MultiPlotContainer.hpp  QuantitiesRatesDisplay.cpp  QuantitiesRatesDisplay.h  QuantitiesRatesDisplay.hpp  QuantitiesRatesRow.cpp  QuantitiesRatesRow.h  QuantitiesRatesRow.hpp  RateLabel.cpp  RateLabel.hpp
src/Windowing/: DevWindow.cpp  DevWindow.h  DevWindow.hpp  NumericTestWidget.cpp  WidgetsRecreation.cpp  WidgetsRecreation.h  WidgetsRecreation.hpp
test/: CMakeLists.txt  data.cpp  fs.cpp
